procstat: Include a maxprot column in "vm -v" output
This field is unlikely to be useful most of the time, but it can be handy.
Hide it under verbose mode together with the RESERV column.

--- a/usr.bin/procstat/procstat.1
+++ b/usr.bin/procstat/procstat.1
@@ -746,6 +746,8 @@ ending address of mapping
 starting address of the reservation this entry belongs to
 .It PRT
 protection flags
+.It MAXPRT
+maximum protection flags
 .It RES
 resident pages
 .It PRES
